src/App.css
:root {
  --base: #141E46;
  --text: #FFF5E0;
  --accent: #ef6161;
  --accent-transp: hsla(0, 82%, 66%, 0.234);
  --primary: #458a96;
  --primary-transp: hsla(189, 37%, 43%, 0.353);
  --h1: clamp(4rem, 0.956vw + 3.694rem, 5rem);
  --p: 2rem;
  font-size: 62.5%;
  background-color: #fee6de;
}

::selection {
  color: var(--base);
  background-color: var(--accent);
}

h1 {
  font-size: var(--h1);
  text-align: center;
  height: 100px;
}

#hero {
  width: 35vw;
}

.icon-desc {
  font-size: var(--p);
}

.app-inner {
  background-color: var(--base);
  color: var(--text);
  display: flex;
  width: calc(100vw - 2rem);
  height: calc(100vh - 2rem);
  margin: 1rem;
  border-radius: 0.5rem;  
}

.icon-grid {
  display: grid;
  width: 60vw;
  height: 100%;
  grid-template-columns: 1fr 1fr;
}

.icons-thin {
  width: 15vw;
  grid-template-columns: 1fr;
}

.icon {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--primary-transp);
  width: 100%;
  height: 100%;
  position: relative;
}

.icon:hover {
  box-shadow: 0px 0px 10px 3px var(--primary);
  background: radial-gradient(circle 100px, var(--primary), var(--base));
  cursor: pointer;
  border-radius: 0.2em;
}

.icon-link {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
}

.icon-img img {
  width: clamp(7rem, 5.736vw + 5.164rem, 13rem);
}

.right-side {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: top;
  width: 40vw;
}

.images-wrapper {
  height: 100%;
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: center;
}

#coin-img {
  width: clamp(4rem, 8.604vw + 1.247rem, 13rem);
  animation: upDown 1.7s alternate infinite ease-in-out;
  position: absolute;
  margin-top: -25vh;
}
@keyframes upDown {
  to {transform: translatey(25px);}
}

#coin-img:hover {
  animation: spin 0.3s;
}

@keyframes spin {
  0% {
    width: clamp(4rem, 8.604vw + 1.247rem, 13rem);
    height: clamp(4rem, 8.604vw + 1.247rem, 13rem);
  }
  50% {
    width: 0%;
  }
  100% {
    width: clamp(4rem, 8.604vw + 1.247rem, 13rem);
    height: clamp(4rem, 8.604vw + 1.247rem, 13rem);
  }
}


#headshot-img {
  width: clamp(7rem, 12.428vw + 3.023rem, 20rem);
  align-self: flex-end;
  justify-self: right;
  position: absolute;
  margin-left: 20vw;
}

.images-wrapper img:hover {
  cursor: pointer;
}

@media (max-width: 600px) {
  .app-inner {
    flex-direction: column;
  }
  .right-side {
    order: -1;
    width: 100%;
  }
  .icon-grid {
    width: 100%;
  }
  #hero {
    width: 90vw;
  }
  .images-wrapper {
    height: 7rem;
  }
  #coin-img {
    margin-top: -10vh;
  }
  #headshot-img {
    margin-left: 75vw;
  }
  @keyframes upDown {
    to {transform: translatey(10px);}
  }
}

